--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,21 @@
+<!-- Angular is a framework which allows us to create "Single Page Applications", 
+  and here the index.html is the single page which was provided by the server. -->
+
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>AngularApp</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="utf-8">
+    <!-- title tag value will be browser title -->
+    <title>AngularApp</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
-  <app-root></app-root>
+    <!-- app-root tag is from app-component.ts -->
+    <app-root></app-root>
 </body>
+
 </html>
