--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <!-- title tag value will be browser title -->
     <title>AngularApp</title>
     <base href="/">
+    <!--for routing set forwardslash-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
