Angular new features & forms html

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,14 @@
     <!--for routing set forwardslash-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- boostrap  styling .css must be placed here -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
     <!-- app-root tag is from app-component.ts -->
     <app-root></app-root>
+
 </body>
 
 </html>
